--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
-        <script src="OrbitControls.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/96/three.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/three@0.102.0/examples/js/controls/OrbitControls.js"></script>
         <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="data.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>skinpack editor</title>
     </head>
@@ -23,8 +24,9 @@
                     <input type="button" id="select1" class="none" onclick="setTab(1)">
                     <p class="sname">name:<input type="text" class="input" value="skin name" id="sname1"></p>
                     <p class="geoname">geometry:<select size="1" id="geo1" onchange="GeoChanged(this.value,1)">
-                                    <option>custom</option>
-                                    <option>customSlim</option>
+                                    <option value="custom">custom</option>
+                                    <option id="slim1" value="customSlim">customSlim</option>
+                                    <option value="other">other</option>
                                 </select>
                         </p>
                         <p class="imgname" id="fileimg1">image:
@@ -60,7 +62,10 @@
             </div>
         </div>
         <div id="canvas">
-            <img id="tt">
+            <img id="texture" src="steve.png">
+            <canvas id="Viewer">
+
+            </canvas>
         </div>
         <div id="bottom">
 
