--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/96/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three@0.102.0/examples/js/controls/OrbitControls.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.2.2/jszip.js"></script>
+        <script src = "FileSaver.js"></script>
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="data.js"></script>
         <link rel="stylesheet" href="style.css">
